--- a/package.json
+++ b/package.json
@@ -6,22 +6,49 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@mantine/core": "7.5.2",
+    "@mantine/dates": "7.5.2",
+    "@mantine/hooks": "7.5.2",
+    "@next/bundle-analyzer": "14.1.0",
+    "dayjs": "1.11.10",
+    "next": "14.1.0",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.1.0"
+    "react-dom": "^18"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@storybook/addon-essentials": "7.6.13",
+    "@storybook/addon-interactions": "7.6.13",
+    "@storybook/addon-links": "7.6.13",
+    "@storybook/addon-onboarding": "^1.0.11",
+    "@storybook/blocks": "7.6.13",
+    "@storybook/nextjs": "7.6.13",
+    "@storybook/react": "7.6.13",
+    "@storybook/test": "7.6.13",
+    "@testing-library/jest-dom": "6.4.2",
+    "@testing-library/react": "14.2.1",
+    "@testing-library/user-event": "14.5.2",
+    "@types/jest": "29.5.12",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/testing-library__jest-dom": "6.0.0",
     "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
     "eslint": "^8",
-    "eslint-config-next": "14.1.0"
+    "eslint-config-next": "14.1.0",
+    "eslint-plugin-storybook": "0.6.15",
+    "postcss": "8.4.35",
+    "postcss-preset-mantine": "1.13.0",
+    "postcss-simple-vars": "7.0.1",
+    "storybook": "7.6.13",
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5"
+  },
+  "resolutions": {
+    "jackspeak": "2.1.1"
   }
 }
