--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@next/bundle-analyzer": "14.1.0",
     "dayjs": "1.11.10",
     "next": "14.1.0",
+    "next-auth": "5.0.0-beta.5",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "tailwind-merge": "2.2.1"
   },
   "devDependencies": {
     "@storybook/addon-essentials": "7.6.13",
