--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@auth/neo4j-adapter": "1.4.3",
     "@mantine/core": "7.5.2",
     "@mantine/dates": "7.5.2",
     "@mantine/hooks": "7.5.2",
     "@next/bundle-analyzer": "14.1.0",
     "dayjs": "1.11.10",
+    "neo4j-driver": "5.17.0",
     "next": "14.1.0",
     "next-auth": "5.0.0-beta.5",
     "react": "^18",
@@ -43,6 +45,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "eslint-plugin-storybook": "0.6.15",
+    "nodemailer": "6.9.9",
     "postcss": "8.4.35",
     "postcss-preset-mantine": "1.13.0",
     "postcss-simple-vars": "7.0.1",
