--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "@auth/neo4j-adapter": "1.4.3",
+    "@headlessui/react": "1.7.18",
+    "@heroicons/react": "2.1.1",
     "@mantine/core": "7.5.2",
     "@mantine/dates": "7.5.2",
     "@mantine/hooks": "7.5.2",
@@ -33,6 +35,7 @@
     "@storybook/nextjs": "7.6.13",
     "@storybook/react": "7.6.13",
     "@storybook/test": "7.6.13",
+    "@tailwindcss/forms": "0.5.7",
     "@testing-library/jest-dom": "6.4.2",
     "@testing-library/react": "14.2.1",
     "@testing-library/user-event": "14.5.2",
